tests/NormalTests/paczka1/fuzzy1/95396223.err
Error in line 1: ZfdxF1P1B A243 22,1
Error in line 4: xuScV A243 67,9
Error in line 6: xuScV A633 53,0
Error in line 10: ZfdxF1P1B A92 33,8
Error in line 13: 7ulf4QgVn27 A92 15,2
Error in line 12: ZfdxF1P1B A633 58,9
Error in line 17: c1L A243 65,3
Error in line 18: pNc8Bm9BTP A92 90,6
Error in line 27: pNc8Bm9BTP A633 -5,4
Error in line 23: ZfdxF1P1B A633 56,4
Error in line 29: xuScV A633 41,6
Error in line 24: pNc8Bm9BTP A633 92,7
Error in line 21: c1L A633 42,6
